src/test/ui/error-codes/E0038.stderr
error[E0038]: the trait `Trait` cannot be made into an object
  --> $DIR/E0038.rs:5:1
   |
LL |     fn foo(&self) -> Self;
   |        --- method `foo` references the `Self` type in its parameters or return type
...
LL | fn call_foo(x: Box<dyn Trait>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` cannot be made into an object

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
